--- a/personal-folder/styles/site-plan.css
+++ b/personal-folder/styles/site-plan.css
@@ -29,7 +29,7 @@ Fonts are separated by a | */
 
 /* Resetting default margin and padding */
 * {
-  margin: 0;
+  margin: 0 ;
   padding: 0;
   box-sizing: border-box;
 }
@@ -39,7 +39,7 @@ body {
   font-family: Arial, sans-serif;
   line-height: 1.6;
   background-color: #f5f5f5;
-  margin: 0;
+  margin: 0 ;
   padding: 0;
 }
 
@@ -122,23 +122,20 @@ footer p {
 footer a img {
   width: 30px;
   height: 30px;
-  margin: 0 5px;
-}
-/* Media queries for responsiveness */
-@media screen and (max-width: 768px) {
-  .column {
-      flex: 0 1 calc(50% - 20px);
-  }
+  margin: 0 auto;
 }
 
-@media screen and (max-width: 480px) {
-  .column {
-      flex: 1 0 100%;
-      margin-right: 0;
-  }
+.container {
+  display: flex;
+  justify-content: space-between; /* Adjust alignment as needed */
 }
 
-
+.column {
+  width: 30%; /* Adjust width as needed */
+  padding: 20px;
+  box-sizing: border-box;
+  /* Other styling properties */
+}
 
 
 /*  Look around below...but DON'T CHANGE ANYTHING! */
